# linexcel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  validate_manual.py  validate_out_en.html  validate_out_fr.html
.github/workflows/: publish.yml
src/linexcel/: __init__.py  aidoc.py  analyzer.py  insights.py  refs.py  result.py  rewrite.py  vba.py  viewer.py
tests/: conftest.py  test_lineage.py
